# drug-extraction

./: .drug-extraction.yaml  .gitignore  .goreleaser.yml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  environment.yml  extractor.py  fetch-data.py  fetch_data.go  go.mod  go.sum  info.md  justfile  main.go  output.jsonl  pyproject.toml  results.xlsx  run-test.sh  runner.sh  tester.py  version2_notes.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
analysis/: third-party.ipynb
cli/: .gitignore  Cargo.toml  README.md  lib.rs  output.csv  pyproject.toml  terms.csv  todos.txt
cli/benches/: bench_algos.rs  bench_loops.rs
cli/src/: in_and_out.rs  lib.rs  main.rs  old_cli.rs  old_lib.rs  old_main.rs  options.rs  runners.rs  searchers.rs  types.rs  utils.rs
cmd/: clean.go  doc.go  extract.go  format.go  pipeline.go  root.go  server.go  utils.go
cmd/drugExtraction/: drug-extraction.go
cmd/example-usage-of-files/: example-runner.go
cmd/web/: error.html  home.html  report.html  success.html
core/: CONTRIBUTING.md  Cargo.toml  README.md
core/src/: external.rs  lib.rs  main.rs  models.rs  utils.rs
data/: bench_results.csv  bench_results.xlsx  death_terms.csv  drug_classes.json  drug_dictionary.csv  drug_info.yaml  output.csv  output.json  pokemon.csv  results.csv  results.xlsx  search_terms.csv  simple_search_terms.csv  test_results.csv
de-workflow/: .gitignore  LICENSE  README.md  pyproject.toml
de-workflow/data/: drug_info.json
de-workflow/src/de_workflow/: __init__.py  app.py  main.py  report.py  utils.py
de-workflow/tests/: test_de_workflow.py
docs/: mkdocs.yml
docs/docs/: cli.md  index.md  roadmap.md  server.md  upcoming.md  usage-cli.md
examples/: cli_cook_county.sh  cli_cook_death_types.sh  cli_multi_run.sh  cli_san_diego_county.sh  flag_analysis.ipynb  generate_record_flags.py  term_combos.ipynb  ydata.ipynb
fast-python-lang/: Dockerfile  Makefile  pyproject.toml
fast-python-lang/tests/: test_string_sim.py
go/: details.md  go.mod  go.sum  main.go  utils.go
go-lang/: Dockerfile  Makefile  README.md  go.mod  go.sum  str_sim_test.go
pkg/: drug_info.yaml  models.go  search.go  utils.go
pkg/models/: doc.go  drug_info.yaml  models.go  search.go  utils.go
pkg/test/: exports_search_terms.go
pract/: output_secondary.json
python/: details.md  utils.py
python-lang/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
python-lang/tests/: test_str_sim.py
r-lang/: Dockerfile  Makefile  run.R
r-lang/tests/: testthat.R
r-lang/tests/testthat/: test-stringdist.R
rust/: Cargo.toml  details.md  log4rs.yaml
rust-lang/: Cargo.toml  Dockerfile  Makefile  README.md
rust-lang/benches/: bench_str_sim.rs
rust-lang/tests/: str_sim_test.rs
rust/src/: utils.rs
scripts/: bench.sh  build.sh  clean_logs.sh  drugs-then-simple.py  fetch-case-records.py  fetch-drug-info.py  jsonlines_to_csv.sh  multiple-columns.py  parse_logs.py  release.sh  run-benchmarks.sh  run-test.sh  run-tests.sh  runner.sh  save-benchmarks.sh  save-tests.sh  time_descriptions.py  wide-form-csv.py
slides/: data-flow.mmd  ecosystem.mmd  index.html  index.md
src/drug_extraction/: models.py
src/drug_extraction/data/: drug_classes.yaml
web/: README.md  error.html  index.html  next.config.js  package-lock.json  package.json  results.csv  success.html  tsconfig.json
web/components/: drug_input.tsx  file_upload.tsx  interactive_input.tsx  limiter.tsx  main_program.tsx  runner.tsx  selector.tsx  simple_input.tsx  types.tsx
web/components/phases/: phase1.tsx  phase2.tsx  phase3.tsx
web/pages/: _app.tsx  _document.tsx  completed.tsx  finished.tsx  index.tsx  interactive.tsx
web/pages/api/: dump-to-file.ts  extract.ts  results.ts
www/drug-extract-wasm/: Cargo.toml  LICENSE
www/drug-extract-wasm/src/: lib.rs
www/web/: next.config.js  package.json
www/web/pages/: index.tsx
