[tool.poetry]
name = "drug-extraction"
version = "0.1.0"
description = "drug extraction program analysis"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
rich = "^10.14.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
ipykernel = "^6.5.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
