[tool.poetry]
name = "drug-extraction"
version = "0.1.0"
description = "Drug Extraction performance analysis"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sodapy = "^2.1.0"
pandas = "^1.3.5"
rich = "^10.16.2"
requests = "^2.27.1"
ipykernel = "^6.6.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
