[package]
name = "drug-extraction-cli"
version = "0.2.0"
edition = "2021"
authors = ["Nick Anthony <nicholas.anthony@uky.edu>"]
description = "A CLI for extracting drugs from text records"
license = "MIT"
repository = "https://github.com/UK-IPOP/drug-extraction"
keywords = ["drug", "extraction", "nlp", "text"]
categories = ["parsing", "command-line-interface"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "extract-drugs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
atty = "0.2.14"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
strsim = "0.10.0"
