[package]
name = "drug-extraction-cli"
version = "1.1.1"
edition = "2021"
authors = ["Nick Anthony <nicholas.anthony@uky.edu>"]
description = "A CLI for extracting drugs from text records"
license = "MIT"
repository = "https://github.com/UK-IPOP/drug-extraction"
keywords = ["drug", "extraction", "nlp", "text"]
categories = ["parsing", "command-line-interface"]
readme = "README.md"

[profile.release]
strip = true

[[bin]]
name = "extract-drugs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
csv = "1.1.6"
dialoguer = { version = "0.10.3", default-features = false  }
indicatif = { version = "0.17.3"}
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
strsim = "0.10.0"
