[package]
name = "drug-extraction-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
strsim = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.6"
reqwest = {version = "0.11.10", features = ["json", "blocking"]}
itertools = "0.10.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"
