[package]
name = "drug-extraction-core"
version = "0.1.1"
edition = "2021"
authors = ["Nick Anthony <nicholas.anthony@uky.edu>"]
description = "A core library for extracting drugs from text records"
license = "MIT"
repository = "https://github.com/UK-IPOP/drug-extraction"
keywords = ["drug", "extraction", "nlp", "text"]
categories = ["parsing"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
strsim = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.6"
itertools = "0.10.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"
