[tool.poetry]
name = "de-workflow"
version = "0.1.4"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
pandas = "^1.4.2"
requests = "^2.27.1"
datapane = "^0.14.0"
plotly = "^5.7.0"
rich = "^12.3.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.scripts]
de-workflow = "de_workflow.main:app"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
