[tool.poetry]
name = "de-workflow"
version = "0.2.2"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^13.3.1"
plotly = "^5.13.0"
datapane = "^0.15.7"
polars = "^0.16.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.252"

[tool.poetry.scripts]
de-workflow = "de_workflow.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
