[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strsim = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.16.2"
log = "0.4.14"
log4rs = "1.0.0"